modules/gdscript/tests/scripts/analyzer/errors/invalid_concatenation_bool.gd
func test():
	print(true + true)
